# tinkoff_workshop

./: .gitignore  README.md  pyproject.toml
app/: urls.py
src/: entitites.py  main.py  utils.py
src/algorithms/: binary.py  branch_and_bound.py  brute_force.py
src/data/: data.csv  generator.py  reader.py
