[tool.poetry]
name = "tinkoff-workshop"
version = "0.1.0"
description = ""
authors = ["Gurgen Abramyan <g.abramyan@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.1"
uvicorn = {extras = ["standard"], version = "0.23.2"}
mimesis = "11.1.0"


[tool.poetry.group.dev.dependencies]
black = "23.10.1"
isort = "5.12.0"
mypy = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
